package quest;

message AoI {
	repeated Unit unitJoin = 1;
	repeated int32 unitLeft = 2;
}

message Unit {
	required int32 id = 1;
	required int32 posX = 2;
	required int32 posY = 3;
	required string name = 4;
}